--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-/9_Linux Basic Command/praktikum/basicjava/nbproject/private/
-/9_Linux Basic Command/praktikum/basicjava/build/
+/11_Object Oriented Programming/praktikum/OOP/nbproject/private/
+/11_Object Oriented Programming/praktikum/OOP/build/
+/11_Object Oriented Programming/praktikum/TugasSection11/nbproject/private/
+/11_Object Oriented Programming/praktikum/TugasSection11/build/
